# Inventory-management-system

./: .env.example  .env.railway  .gitignore  LICENSE  LICENSE   Procfile  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  permissions.py  urls.py  utils.py  views.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
orders/: forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_access_date.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
shipments/: forms.py  models.py  urls.py  views.py
shipments/migrations/: 0001_initial.py
static/css/: dashboard.css  login.css  main.css  mian.css  mobile_responsive.css  shipment.css  toasts.css
static/js/: dashboard.js  django-messages-toasts.js  main.js  order-management.js
staticfiles/css/: main.css  mobile_responsive.css  supplier_details.css
staticfiles/js/: dashboard.js  main.js
templates/: 403.html  404.html  base.html  dashboard.html  inventory.html  product-form-modal.html  shipments.html
templates/accounts/: forget_password.html  login.html  register_user.html
templates/components/: offcanvas.html  order_shipment_card.html  pagination.html  product-search-bar.html  product_card.html  search-bar.html  sidebar.html  supplier_supermarket_card.html  table-card.html
templates/orders/: add-order.html  add-record-modal.html  create-order-modal.html  create_order.html  order_details.html  orders.html  supermarket-form-modal.html  supermarkets.html  (+1 more)
(+28 files in other folders)
